<resources>
    <string name="app_name">BarcodeExample</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <!--<string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>-->
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <!--<string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>-->
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- Main activity -->
    <string name="finish_reading">"Proceed"</string>
    <string name="code_reading">QR code</string>
    <string name="text_reading">Magical word</string>

    <string name="barcode_header">In order to complete your check in process in the study, please read the QR code or Magical word sent to your email</string>
    <string name="barcode_success">QR code read successfully</string>
    <string name="barcode_failure">No QR code captured</string>

    <!-- Magical text activity -->
    <string name="action_magical_word">Magical word</string>
    <string name="prompt_magical_word">Magical word</string>
    <string name="validate_magical_word">Validate</string>
    <string name="cancel_magical_word">Cancel</string>
    <string name="error_field_required">Field required</string>
    <string name="magical_word_success">Magical word read successfully</string>
    <string name="magical_word_failure">No magical word captured</string>
    <string name="magical_word_error">"Error reading magical word: %1$s"</string>

</resources>
